[package]
name = "grpc-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tonic = "0.12.0"

[build-dependencies]
tonic-build = "0.12.0"

[[bin]]
name = "client"
path = "src/client.rs"


[[bin]]
name = "server"
path = "src/server.rs"
