[package]
name = "grpc-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
mpsc = "0.2.3"
prost = "0.13.1"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.15"
tonic = "0.12.0"

[build-dependencies]
tonic-build = "0.12.0"

[[bin]]
name = "client"
path = "src/client.rs"


[[bin]]
name = "server"
path = "src/server.rs"
